# RV32I-SIMULATOR

./: CMakeLists.txt
src/: decode.cpp  disasm.cpp  execute.cpp  instruction.hpp  main.cpp  memory.cpp  memory.hpp  simulator.cpp  simulator.hpp  syscall.cpp
tests/programas/: arbol_simétrico.asm  interactivo_mcd_euclides.s  quicksort.asm
